<resources>
    <string name="app_name">AutoTitle 新闻摘要</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="save">保存</string>
    <string name="no_empty">请勿输入空内容</string>
    <string name="token_fail">鉴权状态异常，请重新登录</string>
    <string name="server_fail">无法连接至服务器</string>

    <!-- Splash / 登录-->
    <string name="login_title">登录</string>
    <string name="login_username">用户名/邮箱</string>
    <string name="login_password">密码</string>
    <string name="login_button_login">登录</string>
    <string name="login_button_reg">注册</string>
    <string name="login_toast_login_success">登录成功</string>
    <string name="login_toast_login_fail">登录失败，用户名/邮箱或密码错误</string>
    <string name="login_toast_login_empty_username">用户名/邮箱不能为空</string>
    <string name="login_toast_login_empty_password">密码不能为空</string>
    <string name="login_bottom">如果继续，则表示您已经同意接受<a href='https://jakting.com'>服务条款</a>及<a href='https://jakting.com'>隐私权政策</a></string>

    <!-- 主页面 -->
    <string name="main_bottom_title_headline">头条</string>
    <string name="main_bottom_title_category">栏目</string>
    <string name="main_bottom_title_search">搜索</string>
    <string name="main_bottom_title_my">我的</string>

    <!--文章页面-->
    <string name="read_autotitle_loading">生成中……</string>
    <string name="read_autotitle_actionbar_title">阅读新闻</string>
    <string name="read_autotitle_actionbar_text">文本调整</string>
    <string name="read_autotitle_actionbar_text_sc">简体中文</string>
    <string name="read_autotitle_actionbar_text_tc">繁體中文</string>
    <string name="read_autotitle_actionbar_text_size">文字大小</string>
    <string name="read_autotitle_actionbar_text_size_set">已设置字号为</string>
    <string name="read_autotitle_actionbar_text_size_default">恢复默认</string>
    <string name="read_autotitle_actionbar_text_size_default_toast">已恢复默认字号18</string>
    <string name="read_autotitle_actionbar_bookmark">收藏</string>
    <string name="read_autotitle_actionbar_share">分享</string>
    <string name="read_autotitle_actionbar_share_text">【分享自 AutoTitle 新闻摘要】</string>
    <string name="read_autotitle_actionbar_browser">在浏览器中打开</string>
    <string name="read_autotitle_title">文本摘要：</string>
    <string name="read_autotitle_title_origin">原文长度：</string>
    <string name="read_autotitle_title_result">摘要长度：</string>

    <!-- 栏目页面分类 -->
    <string name="category_chip_group_1">实时</string>
    <string name="category_chip_group_2">国内</string>
    <string name="category_chip_group_3">国际</string>
    <string name="category_chip_group_4">政治</string>
    <string name="category_chip_group_5">财经</string>
    <string name="category_chip_group_6">体育</string>
    <string name="category_chip_group_7">娱乐</string>
    <string name="category_chip_group_8">军事</string>
    <string name="category_chip_group_9">教育</string>
    <string name="category_chip_group_10">科技</string>
    <string name="category_chip_group_11">NBA</string>
    <string name="category_chip_group_12">股票</string>
    <string name="category_chip_group_13">星座</string>
    <string name="category_chip_group_14">女性</string>
    <string name="category_chip_group_15">健康</string>
    <string name="category_chip_group_16">育儿</string>

    <!-- 搜索页面 -->
    <string name="search_main_text_title">搜索新闻</string>
    <string name="search_main_text_title_result">搜索结果</string>
    <string name="search_main_autotitle_loading">生成中……</string>

    <!-- 我的页面 -->
    <string name="my_main_text_title">我的账号</string>
    <string name="my_profile_text_title">个人信息</string>
    <string name="my_profile_group_1_text_title">基础资料</string>
    <string name="my_profile_group_1_text_title_1">头像</string>
    <string name="my_profile_group_1_text_title_2">昵称</string>
    <string name="my_profile_group_1_text_title_2_more">修改昵称</string>
    <string name="my_profile_group_1_text_title_3">用户名</string>
    <string name="my_profile_group_1_text_title_3_more">不支持修改用户名，已复制到剪贴板</string>
    <string name="my_profile_group_1_text_title_4">ID</string>
    <string name="my_profile_group_1_text_title_4_more">不支持修改ID，已复制到剪贴板</string>
    <string name="my_profile_group_2_text_title">详细资料</string>
    <string name="my_profile_group_2_text_title_1">性别</string>
    <string name="my_profile_group_2_text_title_1_more">修改性别</string>
    <string name="my_profile_group_2_text_title_1_male">男</string>
    <string name="my_profile_group_2_text_title_1_female">女</string>
    <string name="my_profile_group_2_text_title_2">地区</string>
    <string name="my_profile_group_2_text_title_3">个人签名</string>
    <string name="my_profile_group_2_text_title_3_more">修改个人签名</string>
    <string name="my_profile_update">已成功修改</string>

    <string name="my_privacy_text_title">隐私设置</string>
    <string name="my_privacy_group_text_title">谁可以看我</string>
    <string name="my_privacy_group_text_title_1">我的评论</string>
    <string name="my_privacy_group_text_title_2">我的收藏单</string>
    <string name="my_privacy_group_text_title_3">我的点赞</string>
    <string name="my_privacy_select_1">所有人</string>
    <string name="my_privacy_select_2">互相关注的人</string>
    <string name="my_privacy_select_3">我关注的人</string>
    <string name="my_privacy_select_4">我的粉丝</string>
    <string name="my_privacy_select_5">仅自己</string>
</resources>