<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_headline"
        android:orderInCategory="0"
        android:icon="@drawable/ic_outline_whatshot"
        android:title="@string/main_bottom_title_headline" />

    <item
        android:id="@+id/navigation_category"
        android:orderInCategory="1"
        android:icon="@drawable/ic_outline_category"
        android:title="@string/main_bottom_title_category" />

    <item
        android:id="@+id/navigation_search"
        android:orderInCategory="2"
        android:icon="@drawable/ic_outline_search_24"
        android:title="@string/main_bottom_title_search" />

    <item
        android:id="@+id/navigation_my"
        android:orderInCategory="3"
        android:icon="@drawable/ic_outline_account_circle"
        android:title="@string/main_bottom_title_my" />

</menu>
