<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sheet_read_adjust_text"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/sheet_read_text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/notoserifsc_semibold"
            android:text="@string/read_autotitle_actionbar_text"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/divider_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorGrey"
            app:layout_constraintTop_toBottomOf="@id/sheet_read_text_title" />

        <LinearLayout
            android:id="@+id/sheet_read_layout_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/divider_1">

            <Button
                android:id="@+id/sheet_read_font_sc"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/notoserifsc_semibold"
                android:text="@string/read_autotitle_actionbar_text_sc"
                android:textSize="16dp" />

            <Button
                android:id="@+id/sheet_read_font_tc"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/notoserifsc_semibold"
                android:text="@string/read_autotitle_actionbar_text_tc"
                android:textSize="16dp" />
        </LinearLayout>

        <View
            android:id="@+id/divider_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorGrey"
            app:layout_constraintTop_toBottomOf="@id/sheet_read_layout_font" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sheet_read_layout_text_size"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/divider_2" >

            <TextView
                android:id="@+id/sheet_read_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/notoserifsc_semibold"
                android:text="@string/read_autotitle_actionbar_text_size"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/textButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:layout_marginEnd="12dp"
                android:text="@string/read_autotitle_actionbar_text_size_default"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.slider.Slider
            android:id="@+id/sheet_read_font_slider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:stepSize="1"
            android:value="20"
            android:valueFrom="10"
            android:valueTo="30"
            app:layout_constraintTop_toBottomOf="@+id/sheet_read_layout_text_size" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
