<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBackground"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar" />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:background="@color/colorBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

            <LinearLayout
                android:id="@+id/read_layout_misc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/read_text_line"
                        android:layout_width="55dp"
                        android:layout_height="3dp"
                        android:layout_weight="1"
                        android:background="@color/colorGrey"
                        android:orientation="vertical" />

                    <TextView
                        android:id="@+id/read_text_src"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notoserifsc_semibold"
                        android:includeFontPadding="false"
                        android:textColor="@color/colorGrey"
                        android:textSize="16sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/read_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notoserifsc_black"
                android:text="北京开启房地产市场专项整治：从严惩处机构炒作学区房等问题"
                android:textColor="@color/colorContent"
                android:textIsSelectable="true"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/read_layout_misc" />

            <TextView
                android:id="@+id/read_text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/fzbys"
                android:text="特约撰稿人 翁煌德 发自台北"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/read_title" />

            <androidx.cardview.widget.CardView
                android:id="@+id/read_card_autotitle"
                style="@style/Widget.MaterialComponents.CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                app:contentPadding="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/read_text_time">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/read_autotitle_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notoserifsc_bold"
                        android:text="@string/read_autotitle_title"
                        android:textSize="16sp"
                        app:drawableLeftCompat="@drawable/ic_outline_text_snippet_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/read_autotitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:fontFamily="@font/notoserifsc_semibold"
                        android:text="@string/read_autotitle_loading"
                        android:textIsSelectable="true"
                        android:textSize="25sp"
                        android:textStyle="italic"
                        app:layout_constraintTop_toBottomOf="@+id/read_autotitle_title" />


                    <TextView
                        android:id="@+id/read_autotitle_title_origin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notoserifsc_bold"
                        android:text="@string/read_autotitle_title_origin"
                        android:textSize="16sp"
                        android:visibility="gone"
                        app:drawableLeftCompat="@drawable/ic_outline_auto_fix_off_24"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/read_autotitle" />

                    <TextView
                        android:id="@+id/read_autotitle_count_origin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notoserifsc_bold"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/read_autotitle_title_origin" />

                    <TextView

                        android:id="@+id/read_autotitle_title_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notoserifsc_bold"
                        android:text="@string/read_autotitle_title_result"
                        android:textSize="16sp"
                        android:visibility="gone"
                        app:drawableLeftCompat="@drawable/ic_outline_auto_fix_high_24"
                        app:layout_constraintEnd_toStartOf="@id/read_autotitle_count_result"
                        app:layout_constraintTop_toBottomOf="@id/read_autotitle" />

                    <TextView
                        android:id="@+id/read_autotitle_count_result"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/notoserifsc_bold"
                        android:textSize="16sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/read_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/notoserifsc_medium"
                android:lineSpacingExtra="8dp"
                android:text=""
                android:textColor="@color/colorContent"
                android:textIsSelectable="true"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/read_card_autotitle" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>